b=455169, PNG rendering problem with color management with null cms xform. r=joe,r=bholley