modules/lcms/src/cmsxform.c
@@ -264,7 +264,7 @@ void NullXFORM(_LPcmsTRANSFORM p,
                      // Copy in a nondestructive manner in case
                      // the buffers overlap for some reason
                      memmove(out, in, 
-                             Size * T_BYTES(p -> InputFormat) * T_CHANNELS(p -> InputFormat));
+                             Size * T_BYTES(p -> InputFormat) * (T_CHANNELS(p -> InputFormat) + T_EXTRA(p -> InputFormat)));
               }
 
               return;
